Add Rajdeep Dabral's blog entry and image to the leaderboard

--- a/index.html
+++ b/index.html
@@ -579,6 +579,16 @@
                         </td>
                         <td><span class="status status-in-progress">In Progress</span></td>
                     </tr>
+                    <tr>
+                        <td class="team-name">Rajdeep Dabral</td>
+                        <td><span class="type-badge type-blog" title="Migrating MySQL Data to Elasticsearch: A Practical Guide">Blog</span></td>
+                        <td>
+                            <div class="members-container">
+                                <img src="images/Rajdeep Dabral.jpg" alt="Rajdeep Dabral" class="member-photo" title="Rajdeep Dabral">
+                            </div>
+                        </td>
+                        <td><span class="status status-in-review">In Review</span></td>
+                    </tr>
                     </tr>
                 </tbody>
             </table>
