Fix image filename for Rajdeep Dabral in leaderboard

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                         <td><span class="type-badge type-blog" title="Migrating MySQL Data to Elasticsearch: A Practical Guide">Blog</span></td>
                         <td>
                             <div class="members-container">
-                                <img src="images/rajdeep dabral.jpg Dabral.jpg" alt="Rajdeep Dabral" class="member-photo" title="Rajdeep Dabral">
+                                <img src="images/rajdeep dabral.jpg" alt="Rajdeep Dabral" class="member-photo" title="Rajdeep Dabral">
                             </div>
                         </td>
                         <td><span class="status status-in-review">In Review</span></td>
