Add new member entries and update total members count in leaderboard

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                                 <img src="images/Rahul Kamboj.jpg" alt="Rahul Kamboj" class="member-photo" title="Rahul Kamboj">
                             </div>
                         </td>
-                        <td><span class="status status-in-progress">In Progress</span></td>
+                        <td><span class="status status-in-review">In Review</span></td>
                     </tr>
                     <tr>
                         <td class="team-name">Ravindra Jain</td>
@@ -601,12 +601,43 @@
                     </tr>
                     </tr>
                 </tbody>
+                    <tr>
+                        <td class="team-name">Neha Grover</td>
+                        <td><span class="type-badge type-blog" title="Scrum is Not For You">Blog</span></td>
+                        <td>
+                            <div class="members-container">
+                                <img src="images/Neha Grover.jpeg" alt="Neha Grover" class="member-photo" title="Neha Grover">
+                            </div>
+                        </td>
+                        <td><span class="status status-in-progress">In Progress</span></td>
+                    </tr>
+                    <tr>
+                        <td class="team-name">Vitul Goyal</td>
+                        <td><span class="type-badge type-blog" title="How to write test cases in flutter with bloc/riverpod">Blog</span></td>
+                        <td>
+                            <div class="members-container">
+                                <img src="images/Vitul Goyal.jpeg" alt="Vitul Goyal" class="member-photo" title="Vitul Goyal">
+                            </div>
+                        </td>
+                        <td><span class="status status-in-progress">In Progress</span></td>
+                    </tr>
+                    <tr>
+                        <td class="team-name">Tanuj Rasane</td>
+                        <td><span class="type-badge type-blog" title="Introduction to mabl: The Future of Low-Code Test Automation">Blog</span></td>
+                        <td>
+                            <div class="members-container">
+                                <img src="images/Tanuj Rasane.jpeg" alt="Tanuj Rasane" class="member-photo" title="Tanuj Rasane">
+                            </div>
+                        </td>
+                        <td><span class="status status-in-progress">In Progress</span></td>
+                    </tr>
+                </tbody>
             </table>
         </div>
 
         <div class="stats">
             <div class="stat-item">
-                <div class="stat-number">11</div>
+                <div class="stat-number">14</div>
                 <div class="stat-label">Total Members</div>
             </div>
             <div class="stat-item">
