Update member statuses from "In Progress" to "In Review" and "Published" in leaderboard

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                                 <img src="images/Harshit Wadhwa.jpeg" alt="Harshit Wadhwa" class="member-photo" title="Harshit Wadhwa">
                             </div>
                         </td>
-                        <td><span class="status status-in-progress">In Progress</span></td>
+                        <td><span class="status status-in-progress">In Review</span></td>
                     </tr>
                     <tr>
                             <td class="team-name">Krishna Jain</td>
@@ -567,7 +567,7 @@
                                 <img src="images/Ajmal Hasan.jpeg" alt="Ajmal Hasan" class="member-photo" title="Ajmal Hasan">
                             </div>
                         </td>
-                        <td><span class="status status-in-progress">In Progress</span></td>
+                        <td><span class="status status-in-progress">In Review</span></td>
                     </tr>
                     <tr>
                             <td class="team-name">Rahul Kamboj</td>
@@ -577,7 +577,7 @@
                                 <img src="images/Rahul Kamboj.jpg" alt="Rahul Kamboj" class="member-photo" title="Rahul Kamboj">
                             </div>
                         </td>
-                        <td><span class="status status-in-review">In Review</span></td>
+                        <td><span class="status status-in-review">Published</span></td>
                     </tr>
                     <tr>
                         <td class="team-name">Ravindra Jain</td>
@@ -587,7 +587,7 @@
                                 <img src="images/Ravindra Jain.jpg" alt="Ravindra Jain" class="member-photo" title="Ravindra Jain">
                             </div>
                         </td>
-                        <td><span class="status status-in-progress">In Progress</span></td>
+                        <td><span class="status status-in-progress">In Review</span></td>
                     </tr>
                     <tr>
                         <td class="team-name">Rajdeep Dabral</td>
@@ -609,7 +609,7 @@
                                 <img src="images/Neha Grover.jpeg" alt="Neha Grover" class="member-photo" title="Neha Grover">
                             </div>
                         </td>
-                        <td><span class="status status-in-progress">In Progress</span></td>
+                        <td><span class="status status-in-progress">Published</span></td>
                     </tr>
                     <tr>
                         <td class="team-name">Vitul Goyal</td>
@@ -619,7 +619,7 @@
                                 <img src="images/Vitul Goyal.jpeg" alt="Vitul Goyal" class="member-photo" title="Vitul Goyal">
                             </div>
                         </td>
-                        <td><span class="status status-in-progress">In Progress</span></td>
+                        <td><span class="status status-in-progress">In Review</span></td>
                     </tr>
                     <tr>
                         <td class="team-name">Tanuj Rasane</td>
